@@ -308,6 +308,52 @@ block|}
 block|}
 if|if
 condition|(
+operator|!
+name|relationship
+operator|.
+name|isToPK
+argument_list|()
+condition|)
+block|{
+name|DbRelationship
+name|reverseRelationship
+init|=
+name|relationship
+operator|.
+name|getReverseRelationship
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|reverseRelationship
+operator|==
+literal|null
+operator|||
+operator|!
+name|reverseRelationship
+operator|.
+name|isToPK
+argument_list|()
+condition|)
+block|{
+name|addFailure
+argument_list|(
+name|validationResult
+argument_list|,
+name|relationship
+argument_list|,
+literal|"DbRelationship '%s' has join not to PK. Cayenne doesn't allow this type of relashionships"
+argument_list|,
+name|toString
+argument_list|(
+name|relationship
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+if|if
+condition|(
 name|Util
 operator|.
 name|isEmptyString
