@@ -19,26 +19,6 @@ end_package
 
 begin_import
 import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Iterator
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|List
-import|;
-end_import
-
-begin_import
-import|import
 name|org
 operator|.
 name|apache
@@ -146,6 +126,26 @@ operator|.
 name|validation
 operator|.
 name|ValidationResult
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Iterator
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
 import|;
 end_import
 
@@ -568,6 +568,52 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+block|}
+if|if
+condition|(
+operator|!
+name|relationship
+operator|.
+name|isToPK
+argument_list|()
+condition|)
+block|{
+name|ObjRelationship
+name|reverseRelationship
+init|=
+name|relationship
+operator|.
+name|getReverseRelationship
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|reverseRelationship
+operator|==
+literal|null
+operator|||
+operator|!
+name|reverseRelationship
+operator|.
+name|isToPK
+argument_list|()
+condition|)
+block|{
+name|addFailure
+argument_list|(
+name|validationResult
+argument_list|,
+name|relationship
+argument_list|,
+literal|"ObjRelationship '%s' has join not to PK. Cayenne doesn't allow this type of relashioships"
+argument_list|,
+name|toString
+argument_list|(
+name|relationship
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 comment|// check for relationships with same source and target entities
